gh-4365 Add Rows searchable